# csci498-compiler

./: .gitignore  CMakeLists.txt  README.md  Transpose.sln  ast.cpp  ast.h  frontend.cpp  lang_design.txt  language_0.l  language_0.lex  language_0.y  language_0_design.txt  parse-tree-to-graphvis.py  token.cpp  token.hpp  tokenstream.cpp  tokenstream.hpp  unistd.h
CppFront/: CppFront.filters  CppFront.vcxproj  CppFront.vcxproj.filters  FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  Preprocessor.cpp  Preprocessor.h  Stream.cpp  Stream.h  Transpose.cpp
TLL/: FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h  TLL.vcxproj  TLL.vcxproj.filters
Transpose/: Transpose.cpp  Transpose.h  Transpose.vcxproj  Transpose.vcxproj.filters  TransposeInternal.cpp  TransposeInternal.h
examples/: 12-days-of-christmas.c  simple.lang0  standard-no-decl-list.lang0  standard.lang0
flex-bison/: language_0.l  language_0.y
include/: ast.h  datablock.h  symboltable.h
source/: ast.cpp  datablock.cpp  frontend.cpp  symboltable.cpp
test/: datablock_test.cpp
tests/: datablock_test.cpp  symboltable_test.cpp
